Add ex:hasInterest in RDF

--- a/notebooks/corso-kg-rdf.ipynb
+++ b/notebooks/corso-kg-rdf.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "id": "04ce129b-0e6b-4e5a-b2f2-e61263c80736",
    "metadata": {},
    "outputs": [
@@ -21,16 +21,16 @@
       "Requirement already satisfied: ruamel.yaml>=0.17.21 in /opt/conda/lib/python3.11/site-packages (from yatter) (0.17.32)\n",
       "Collecting coloredlogs>=15.0.1 (from yatter)\n",
       "  Downloading coloredlogs-15.0.1-py2.py3-none-any.whl (46 kB)\n",
-      "\u001b[2K     \u001b[90m━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━\u001b[0m \u001b[32m46.0/46.0 kB\u001b[0m \u001b[31m3.0 MB/s\u001b[0m eta \u001b[36m0:00:00\u001b[0m\n",
+      "\u001b[2K     \u001b[90m━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━\u001b[0m \u001b[32m46.0/46.0 kB\u001b[0m \u001b[31m7.6 MB/s\u001b[0m eta \u001b[36m0:00:00\u001b[0m\n",
       "\u001b[?25hCollecting duckdb<0.8.0,>=0.7.0 (from morph-kgc)\n",
       "  Downloading duckdb-0.7.1-cp311-cp311-manylinux_2_17_x86_64.manylinux2014_x86_64.whl (15.2 MB)\n",
-      "\u001b[2K     \u001b[90m━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━\u001b[0m \u001b[32m15.2/15.2 MB\u001b[0m \u001b[31m6.7 MB/s\u001b[0m eta \u001b[36m0:00:00\u001b[0m00:01\u001b[0m00:01\u001b[0m\n",
+      "\u001b[2K     \u001b[90m━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━\u001b[0m \u001b[32m15.2/15.2 MB\u001b[0m \u001b[31m8.8 MB/s\u001b[0m eta \u001b[36m0:00:00\u001b[0m00:01\u001b[0m:00:01\u001b[0m\n",
       "\u001b[?25hCollecting elementpath<5.0.0,>=4.0.0 (from morph-kgc)\n",
       "  Obtaining dependency information for elementpath<5.0.0,>=4.0.0 from https://files.pythonhosted.org/packages/eb/4f/fecd0fc5adc5f91a6154189ea7b2192cf62ce7d685a0e9b23737acb31808/elementpath-4.1.5-py3-none-any.whl.metadata\n",
       "  Downloading elementpath-4.1.5-py3-none-any.whl.metadata (6.7 kB)\n",
       "Collecting falcon<4.0.0,>=3.0.0 (from morph-kgc)\n",
       "  Downloading falcon-3.1.1-cp311-cp311-manylinux_2_17_x86_64.manylinux2014_x86_64.whl (9.1 MB)\n",
-      "\u001b[2K     \u001b[90m━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━\u001b[0m \u001b[32m9.1/9.1 MB\u001b[0m \u001b[31m7.3 MB/s\u001b[0m eta \u001b[36m0:00:00\u001b[0m00:01\u001b[0m00:01\u001b[0m\n",
+      "\u001b[2K     \u001b[90m━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━\u001b[0m \u001b[32m9.1/9.1 MB\u001b[0m \u001b[31m10.8 MB/s\u001b[0m eta \u001b[36m0:00:00\u001b[0ma \u001b[36m0:00:01\u001b[0mm\n",
       "\u001b[?25hCollecting jsonpath-python<2.0.0,>=1.0.6 (from morph-kgc)\n",
       "  Downloading jsonpath_python-1.0.6-py3-none-any.whl (7.6 kB)\n",
       "Requirement already satisfied: pandas<3.0.0,>=2.0.0 in /opt/conda/lib/python3.11/site-packages (from morph-kgc) (2.0.3)\n",
@@ -43,7 +43,7 @@
       "Requirement already satisfied: sqlalchemy<3.0.0,>=2.0.0 in /opt/conda/lib/python3.11/site-packages (from morph-kgc) (2.0.19)\n",
       "Collecting humanfriendly>=9.1 (from coloredlogs>=15.0.1->yatter)\n",
       "  Downloading humanfriendly-10.0-py2.py3-none-any.whl (86 kB)\n",
-      "\u001b[2K     \u001b[90m━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━\u001b[0m \u001b[32m86.8/86.8 kB\u001b[0m \u001b[31m7.7 MB/s\u001b[0m eta \u001b[36m0:00:00\u001b[0m\n",
+      "\u001b[2K     \u001b[90m━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━\u001b[0m \u001b[32m86.8/86.8 kB\u001b[0m \u001b[31m11.6 MB/s\u001b[0m eta \u001b[36m0:00:00\u001b[0m\n",
       "\u001b[?25hRequirement already satisfied: six in /opt/conda/lib/python3.11/site-packages (from isodate<0.7.0,>=0.6.0->rdflib) (1.16.0)\n",
       "Requirement already satisfied: python-dateutil>=2.8.2 in /opt/conda/lib/python3.11/site-packages (from pandas<3.0.0,>=2.0.0->morph-kgc) (2.8.2)\n",
       "Requirement already satisfied: pytz>=2020.1 in /opt/conda/lib/python3.11/site-packages (from pandas<3.0.0,>=2.0.0->morph-kgc) (2023.3)\n",
@@ -52,15 +52,15 @@
       "Requirement already satisfied: ruamel.yaml.clib>=0.2.7 in /opt/conda/lib/python3.11/site-packages (from ruamel.yaml>=0.17.21->yatter) (0.2.7)\n",
       "Collecting sqlparse<0.5.0,>=0.4.1 (from sql-metadata<3.0.0,>=2.6.0->morph-kgc)\n",
       "  Downloading sqlparse-0.4.4-py3-none-any.whl (41 kB)\n",
-      "\u001b[2K     \u001b[90m━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━\u001b[0m \u001b[32m41.2/41.2 kB\u001b[0m \u001b[31m4.2 MB/s\u001b[0m eta \u001b[36m0:00:00\u001b[0m\n",
+      "\u001b[2K     \u001b[90m━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━\u001b[0m \u001b[32m41.2/41.2 kB\u001b[0m \u001b[31m4.5 MB/s\u001b[0m eta \u001b[36m0:00:00\u001b[0m\n",
       "\u001b[?25hRequirement already satisfied: typing-extensions>=4.2.0 in /opt/conda/lib/python3.11/site-packages (from sqlalchemy<3.0.0,>=2.0.0->morph-kgc) (4.7.1)\n",
       "Requirement already satisfied: greenlet!=0.4.17 in /opt/conda/lib/python3.11/site-packages (from sqlalchemy<3.0.0,>=2.0.0->morph-kgc) (2.0.2)\n",
       "Downloading morph_kgc-2.6.3-py3-none-any.whl (53 kB)\n",
-      "\u001b[2K   \u001b[90m━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━\u001b[0m \u001b[32m53.2/53.2 kB\u001b[0m \u001b[31m8.4 MB/s\u001b[0m eta \u001b[36m0:00:00\u001b[0m\n",
+      "\u001b[2K   \u001b[90m━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━\u001b[0m \u001b[32m53.2/53.2 kB\u001b[0m \u001b[31m9.7 MB/s\u001b[0m eta \u001b[36m0:00:00\u001b[0m\n",
       "\u001b[?25hDownloading elementpath-4.1.5-py3-none-any.whl (216 kB)\n",
-      "\u001b[2K   \u001b[90m━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━\u001b[0m \u001b[32m216.4/216.4 kB\u001b[0m \u001b[31m6.4 MB/s\u001b[0m eta \u001b[36m0:00:00\u001b[0m\n",
+      "\u001b[2K   \u001b[90m━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━\u001b[0m \u001b[32m216.4/216.4 kB\u001b[0m \u001b[31m36.7 MB/s\u001b[0m eta \u001b[36m0:00:00\u001b[0m\n",
       "\u001b[?25hDownloading pyoxigraph-0.3.19-cp311-cp311-manylinux_2_17_x86_64.manylinux2014_x86_64.whl (6.7 MB)\n",
-      "\u001b[2K   \u001b[90m━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━\u001b[0m \u001b[32m6.7/6.7 MB\u001b[0m \u001b[31m4.8 MB/s\u001b[0m eta \u001b[36m0:00:00\u001b[0m00:01\u001b[0m00:01\u001b[0m\n",
+      "\u001b[2K   \u001b[90m━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━\u001b[0m \u001b[32m6.7/6.7 MB\u001b[0m \u001b[31m9.8 MB/s\u001b[0m eta \u001b[36m0:00:00\u001b[0m:00:01\u001b[0m00:01\u001b[0mm\n",
       "\u001b[?25hDownloading sql_metadata-2.9.0-py3-none-any.whl (21 kB)\n",
       "Installing collected packages: duckdb, sqlparse, pyoxigraph, jsonpath-python, humanfriendly, falcon, elementpath, sql-metadata, coloredlogs, yatter, morph-kgc\n",
       "Successfully installed coloredlogs-15.0.1 duckdb-0.7.1 elementpath-4.1.5 falcon-3.1.1 humanfriendly-10.0 jsonpath-python-1.0.6 morph-kgc-2.6.3 pyoxigraph-0.3.19 sql-metadata-2.9.0 sqlparse-0.4.4 yatter-1.1.0\n"
@@ -74,7 +74,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 3,
    "id": "567abcbb-890e-48a9-8180-c1424336e2e4",
    "metadata": {},
    "outputs": [],
@@ -86,7 +86,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 4,
    "id": "3fe54e50-8e9b-410e-82c5-3b837f2f29bf",
    "metadata": {},
    "outputs": [
@@ -160,7 +160,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 43,
    "id": "10ac0463-0a60-4a22-97e2-758834e9f69f",
    "metadata": {},
    "outputs": [
@@ -168,222 +168,10 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "2023-10-20 16:30:12,922 | INFO: Translating YARRRML mapping to [R2]RML\n",
-      "2023-10-20 16:30:12,923 | INFO: RML content is created!\n",
-      "2023-10-20 16:30:12,934 | INFO: Mapping has been syntactically validated.\n",
-      "2023-10-20 16:30:12,935 | INFO: Translation has finished successfully.\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "@prefix kg: <http://www.cefriel.com/corso-kg/data/>.\n",
-      "@prefix ex: <http://www.cefriel.com/corso-kg/schema/>.\n",
-      "@prefix skos: <http://www.w3.org/2004/02/skos/core#>.\n",
-      "@prefix rr: <http://www.w3.org/ns/r2rml#>.\n",
-      "@prefix rml: <http://semweb.mmlab.be/ns/rml#>.\n",
-      "@prefix rdf: <http://www.w3.org/1999/02/22-rdf-syntax-ns#>.\n",
-      "@prefix rdfs: <http://www.w3.org/2000/01/rdf-schema#>.\n",
-      "@prefix xsd: <http://www.w3.org/2001/XMLSchema#>.\n",
-      "@prefix ql: <http://semweb.mmlab.be/ns/ql#>.\n",
-      "@prefix d2rq: <http://www.wiwiss.fu-berlin.de/suhl/bizer/D2RQ/0.1#>.\n",
-      "@prefix foaf: <http://xmlns.com/foaf/0.1/>.\n",
-      "@prefix schema: <http://schema.org/>.\n",
-      "@prefix formats: <http://www.w3.org/ns/formats/>.\n",
-      "@prefix comp: <http://semweb.mmlab.be/ns/rml-compression#>.\n",
-      "@prefix void: <http://rdfs.org/ns/void#>.\n",
-      "@prefix fnml: <http://semweb.mmlab.be/ns/fnml#>.\n",
-      "@prefix grel: <http://users.ugent.be/~bjdmeest/function/grel.ttl#>.\n",
-      "@base <http://example.com/ns#>.\n",
-      "\n",
-      "\n",
-      "<unit_0> a rr:TriplesMap;\n",
-      "\n",
-      "\trml:logicalSource [\n",
-      "\t\ta rml:LogicalSource;\n",
-      "\t\trml:source \"./../data/employees.csv\";\n",
-      "\t\trml:referenceFormulation ql:CSV\n",
-      "\t];\n",
-      "\trr:subjectMap [\n",
-      "\t\ta rr:SubjectMap;\n",
-      "\t\trr:template \"http://www.cefriel.com/corso-kg/data/unit/{unit}\";\n",
-      "\t];\n",
-      "\trr:predicateObjectMap [\n",
-      "\t\trr:predicateMap [\n",
-      "\t\t\ta rr:PredicateMap;\n",
-      "\t\t\trr:constant rdf:type;\n",
-      "\t\t];\n",
-      "\t\trr:objectMap [\n",
-      "\t\t\ta rr:ObjectMap;\n",
-      "\t\t\trr:constant foaf:Group;\n",
-      "\t\t];\n",
-      "\t];\n",
-      "\trr:predicateObjectMap [\n",
-      "\t\trr:predicateMap [\n",
-      "\t\t\ta rr:PredicateMap;\n",
-      "\t\t\trr:constant foaf:title;\n",
-      "\t\t];\n",
-      "\t\trr:objectMap [\n",
-      "\t\t\ta rr:ObjectMap;\n",
-      "\t\t\trml:reference \"unit\";\n",
-      "\t\t];\n",
-      "\t].\n",
-      "\n",
-      "\n",
-      "<employee_0> a rr:TriplesMap;\n",
-      "\n",
-      "\trml:logicalSource [\n",
-      "\t\ta rml:LogicalSource;\n",
-      "\t\trml:source \"./../data/employees.csv\";\n",
-      "\t\trml:referenceFormulation ql:CSV\n",
-      "\t];\n",
-      "\trr:subjectMap [\n",
-      "\t\ta rr:SubjectMap;\n",
-      "\t\trr:template \"http://www.cefriel.com/corso-kg/data/employee/{id}\";\n",
-      "\t];\n",
-      "\trr:predicateObjectMap [\n",
-      "\t\trr:predicateMap [\n",
-      "\t\t\ta rr:PredicateMap;\n",
-      "\t\t\trr:constant rdf:type;\n",
-      "\t\t];\n",
-      "\t\trr:objectMap [\n",
-      "\t\t\ta rr:ObjectMap;\n",
-      "\t\t\trr:constant foaf:Person;\n",
-      "\t\t];\n",
-      "\t];\n",
-      "\trr:predicateObjectMap [\n",
-      "\t\trr:predicateMap [\n",
-      "\t\t\ta rr:PredicateMap;\n",
-      "\t\t\trr:constant rdf:type;\n",
-      "\t\t];\n",
-      "\t\trr:objectMap [\n",
-      "\t\t\ta rr:ObjectMap;\n",
-      "\t\t\trr:constant ex:Employee;\n",
-      "\t\t];\n",
-      "\t];\n",
-      "\trr:predicateObjectMap [\n",
-      "\t\trr:predicateMap [\n",
-      "\t\t\ta rr:PredicateMap;\n",
-      "\t\t\trr:constant foaf:name;\n",
-      "\t\t];\n",
-      "\t\trr:objectMap [\n",
-      "\t\t\ta rr:ObjectMap;\n",
-      "\t\t\trml:reference \"name\";\n",
-      "\t\t];\n",
-      "\t];\n",
-      "\trr:predicateObjectMap [\n",
-      "\t\trr:predicateMap [\n",
-      "\t\t\ta rr:PredicateMap;\n",
-      "\t\t\trr:constant foaf:surname;\n",
-      "\t\t];\n",
-      "\t\trr:objectMap [\n",
-      "\t\t\ta rr:ObjectMap;\n",
-      "\t\t\trml:reference \"surname\";\n",
-      "\t\t];\n",
-      "\t];\n",
-      "\trr:predicateObjectMap [\n",
-      "\t\trr:predicateMap [\n",
-      "\t\t\ta rr:PredicateMap;\n",
-      "\t\t\trr:constant foaf:member;\n",
-      "\t\t];\n",
-      "\t\trr:objectMap [ \n",
-      "\t\t\ta rr:RefObjectMap;\n",
-      "\t\t\trr:parentTriplesMap <unit_0>;\n",
-      "\t\t\trr:joinCondition [\n",
-      "\t\t\t\trr:child \"unit\";\n",
-      "\t\t\t\trr:parent \"unit\";\n",
-      "\t\t\t]; \n",
-      "\t\t];\n",
-      "\t].\n",
-      "\n",
-      "\n",
-      "<competences_0> a rr:TriplesMap;\n",
-      "\n",
-      "\trml:logicalSource [\n",
-      "\t\ta rml:LogicalSource;\n",
-      "\t\trml:source \"./../data/competences-iri.csv\";\n",
-      "\t\trml:referenceFormulation ql:CSV\n",
-      "\t];\n",
-      "\trr:subjectMap [\n",
-      "\t\ta rr:SubjectMap;\n",
-      "\t\trr:template \"http://data.europa.eu/snb/dcf/{iri}\";\n",
-      "\t];\n",
-      "\trr:predicateObjectMap [\n",
-      "\t\trr:predicateMap [\n",
-      "\t\t\ta rr:PredicateMap;\n",
-      "\t\t\trr:constant rdf:type;\n",
-      "\t\t];\n",
-      "\t\trr:objectMap [\n",
-      "\t\t\ta rr:ObjectMap;\n",
-      "\t\t\trr:constant ex:Competence;\n",
-      "\t\t];\n",
-      "\t].\n",
-      "\n",
-      "\n",
-      "<assignment_0> a rr:TriplesMap;\n",
-      "\n",
-      "\trml:logicalSource [\n",
-      "\t\ta rml:LogicalSource;\n",
-      "\t\trml:source \"./../data/assignment.csv\";\n",
-      "\t\trml:referenceFormulation ql:CSV\n",
-      "\t];\n",
-      "\trr:subjectMap [\n",
-      "\t\ta rr:SubjectMap;\n",
-      "\t\trr:template \"http://www.cefriel.com/corso-kg/data/assignment/{employee_id}-{competence_id}\";\n",
-      "\t];\n",
-      "\trr:predicateObjectMap [\n",
-      "\t\trr:predicateMap [\n",
-      "\t\t\ta rr:PredicateMap;\n",
-      "\t\t\trr:constant rdf:type;\n",
-      "\t\t];\n",
-      "\t\trr:objectMap [\n",
-      "\t\t\ta rr:ObjectMap;\n",
-      "\t\t\trr:constant ex:EmployeeCompetence;\n",
-      "\t\t];\n",
-      "\t];\n",
-      "\trr:predicateObjectMap [\n",
-      "\t\trr:predicateMap [\n",
-      "\t\t\ta rr:PredicateMap;\n",
-      "\t\t\trr:constant ex:level;\n",
-      "\t\t];\n",
-      "\t\trr:objectMap [\n",
-      "\t\t\ta rr:ObjectMap;\n",
-      "\t\t\trml:reference \"level\";\n",
-      "\t\t\trr:datatype xsd:int\n",
-      "\t\t];\n",
-      "\t];\n",
-      "\trr:predicateObjectMap [\n",
-      "\t\trr:predicateMap [\n",
-      "\t\t\ta rr:PredicateMap;\n",
-      "\t\t\trr:constant ex:employee;\n",
-      "\t\t];\n",
-      "\t\trr:objectMap [ \n",
-      "\t\t\ta rr:RefObjectMap;\n",
-      "\t\t\trr:parentTriplesMap <employee_0>;\n",
-      "\t\t\trr:joinCondition [\n",
-      "\t\t\t\trr:child \"employee_id\";\n",
-      "\t\t\t\trr:parent \"id\";\n",
-      "\t\t\t]; \n",
-      "\t\t];\n",
-      "\t];\n",
-      "\trr:predicateObjectMap [\n",
-      "\t\trr:predicateMap [\n",
-      "\t\t\ta rr:PredicateMap;\n",
-      "\t\t\trr:constant ex:competence;\n",
-      "\t\t];\n",
-      "\t\trr:objectMap [ \n",
-      "\t\t\ta rr:RefObjectMap;\n",
-      "\t\t\trr:parentTriplesMap <competences_0>;\n",
-      "\t\t\trr:joinCondition [\n",
-      "\t\t\t\trr:child \"competence_id\";\n",
-      "\t\t\t\trr:parent \"id\";\n",
-      "\t\t\t]; \n",
-      "\t\t];\n",
-      "\t].\n",
-      "\n",
-      "\n",
-      "\n"
+      "2023-10-23 13:27:50,913 | INFO: Translating YARRRML mapping to [R2]RML\n",
+      "2023-10-23 13:27:50,914 | INFO: RML content is created!\n",
+      "2023-10-23 13:27:50,923 | INFO: Mapping has been syntactically validated.\n",
+      "2023-10-23 13:27:50,924 | INFO: Translation has finished successfully.\n"
      ]
     }
    ],
@@ -397,7 +185,7 @@
     "rml_content = yatter.translate(yaml.load(open(mappings_file)))\n",
     "\n",
     "# Print generated RML triples\n",
-    "print(rml_content)\n",
+    "# print(rml_content)\n",
     "\n",
     "# Save RML to file\n",
     "rml_file = join(folder, \"mappings/corso-kg-rml.ttl\")\n",
@@ -407,7 +195,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 44,
    "id": "797e9175-8961-4096-aa53-ce4f309d2762",
    "metadata": {},
    "outputs": [
@@ -415,27 +203,26 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "2023-10-20 16:30:26,047 | INFO: NumExpr defaulting to 8 threads.\n",
-      "2023-10-20 16:30:26,770 | DEBUG: CONFIGURATION: {'output_file': 'knowledge-graph', 'na_values': ',nan', 'safe_percent_encoding': '', 'read_parsed_mappings_path': '', 'write_parsed_mappings_path': '', 'mapping_partitioning': 'PARTIAL-AGGREGATIONS', 'logging_file': '', 'oracle_client_lib_dir': '', 'oracle_client_config_dir': '', 'udfs': '', 'output_dir': '', 'output_format': 'N-TRIPLES', 'only_printable_chars': 'no', 'infer_sql_datatypes': 'no', 'logging_level': 'INFO', 'number_of_processes': '16'}\n",
-      "2023-10-20 16:30:26,771 | DEBUG: DATA SOURCE `Competences`: {'mappings': './../mappings/corso-kg-rml.ttl'}\n",
-      "2023-10-20 16:30:27,581 | DEBUG: Removed self-join from mapping rule `#TM6`.\n",
-      "2023-10-20 16:30:27,587 | INFO: 12 mapping rules retrieved.\n",
-      "2023-10-20 16:30:27,601 | DEBUG: All predicate maps are constant-valued, invariant subset is not enforced.\n",
-      "2023-10-20 16:30:27,609 | DEBUG: All graph maps are constant-valued, invariant subset is not enforced.\n",
-      "2023-10-20 16:30:27,615 | INFO: Mapping partition with 12 groups generated.\n",
-      "2023-10-20 16:30:27,619 | INFO: Maximum number of rules within mapping group: 1.\n",
-      "2023-10-20 16:30:27,620 | INFO: Mappings processed in 0.781 seconds.\n",
-      "2023-10-20 16:30:27,627 | DEBUG: Parallelizing with 16 cores.\n",
-      "2023-10-20 16:30:27,913 | INFO: Number of triples generated in total: 1488.\n"
+      "2023-10-23 13:27:52,036 | DEBUG: CONFIGURATION: {'output_file': 'knowledge-graph', 'na_values': ',nan', 'safe_percent_encoding': '', 'read_parsed_mappings_path': '', 'write_parsed_mappings_path': '', 'mapping_partitioning': 'PARTIAL-AGGREGATIONS', 'logging_file': '', 'oracle_client_lib_dir': '', 'oracle_client_config_dir': '', 'udfs': '', 'output_dir': '', 'output_format': 'N-TRIPLES', 'only_printable_chars': 'no', 'infer_sql_datatypes': 'no', 'logging_level': 'INFO', 'number_of_processes': '16'}\n",
+      "2023-10-23 13:27:52,037 | DEBUG: DATA SOURCE `Competences`: {'mappings': './../mappings/corso-kg-rml.ttl'}\n",
+      "2023-10-23 13:27:52,812 | DEBUG: Removed self-join from mapping rule `#TM6`.\n",
+      "2023-10-23 13:27:52,817 | INFO: 13 mapping rules retrieved.\n",
+      "2023-10-23 13:27:52,828 | DEBUG: All predicate maps are constant-valued, invariant subset is not enforced.\n",
+      "2023-10-23 13:27:52,836 | DEBUG: All graph maps are constant-valued, invariant subset is not enforced.\n",
+      "2023-10-23 13:27:52,842 | INFO: Mapping partition with 13 groups generated.\n",
+      "2023-10-23 13:27:52,844 | INFO: Maximum number of rules within mapping group: 1.\n",
+      "2023-10-23 13:27:52,845 | INFO: Mappings processed in 0.804 seconds.\n",
+      "2023-10-23 13:27:52,849 | DEBUG: Parallelizing with 16 cores.\n",
+      "2023-10-23 13:27:53,118 | INFO: Number of triples generated in total: 1813.\n"
      ]
     },
     {
      "data": {
       "text/plain": [
-       "<Graph identifier=N8bc4573e67124a4c978d08bff3343643 (<class 'rdflib.graph.Graph'>)>"
+       "<Graph identifier=N93841e2a7aeb46cab922811f4ac0d971 (<class 'rdflib.graph.Graph'>)>"
       ]
      },
-     "execution_count": 5,
+     "execution_count": 44,
      "metadata": {},
      "output_type": "execute_result"
     }
