Update corso-kg-rdf to directly refer external IRIs

--- a/notebooks/corso-kg-generate.ipynb
+++ b/notebooks/corso-kg-generate.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 3,
    "id": "43a7e7b0-6654-4319-b97f-a830cfafa023",
    "metadata": {},
    "outputs": [
@@ -11,7 +11,8 @@
      "output_type": "stream",
      "text": [
       "CSV file '../data/employees.csv' has been generated with 30 fictitious employees.\n",
-      "CSV file '../data/assignment.csv' has been generated with random assignment data.\n"
+      "CSV file '../data/assignment.csv' has been generated with random assignment data.\n",
+      "CSV file '../data/assignment-iri.csv' has been generated from assignment.csv data.\n"
      ]
     }
    ],
@@ -76,7 +77,27 @@
     "    writer.writerow(assignment_fields)\n",
     "    writer.writerows(assignments)\n",
     "\n",
-    "print(f\"CSV file '{assignment_filename}' has been generated with random assignment data.\")\n"
+    "print(f\"CSV file '{assignment_filename}' has been generated with random assignment data.\")\n",
+    "\n",
+    "competences_iri = {}\n",
+    "with open('../data/competences-iri.csv', mode='r') as file:\n",
+    "    csv_reader = csv.DictReader(file)\n",
+    "    for row in csv_reader:\n",
+    "        id = row['id']\n",
+    "        iri = row['iri']\n",
+    "        competences_iri[id] = iri\n",
+    "\n",
+    "for assignment in assignments:\n",
+    "    assignment[1] = competences_iri[assignment[1]]\n",
+    "\n",
+    "# Write assignment data to assignment-iri.csv\n",
+    "assignment_filename = '../data/assignment-iri.csv'\n",
+    "with open(assignment_filename, 'w', newline='') as csvfile:\n",
+    "    writer = csv.writer(csvfile)\n",
+    "    writer.writerow(assignment_fields)\n",
+    "    writer.writerows(assignments)\n",
+    "\n",
+    "print(f\"CSV file '{assignment_filename}' has been generated from assignment.csv data.\")\n"
    ]
   },
   {
