--- a/notebooks/corso-kg-neo4j.ipynb
+++ b/notebooks/corso-kg-neo4j.ipynb
@@ -22,7 +22,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 2,
    "id": "f74c8541-2658-4e7c-8eab-79fa680199b4",
    "metadata": {},
    "outputs": [],
@@ -43,7 +43,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 3,
    "id": "b83cf41b-db7d-4754-a1fb-0690a462e0c2",
    "metadata": {},
    "outputs": [
@@ -152,7 +152,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 4,
    "id": "dd912652-cba1-46c0-acb5-cb2c23ce8c61",
    "metadata": {},
    "outputs": [],
@@ -178,33 +178,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
-   "id": "c5b88dd6-1a58-4c57-b7c7-512d7087ad5b",
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "name\tsurname\t\n",
-      "Jane\tWilson\t\n",
-      "Jane\tSmith\t\n",
-      "Jane\tBrown\t\n"
-     ]
-    }
-   ],
-   "source": [
-    "# Other employees having same competences\n",
-    "custom_query = \"\"\"\n",
-    "    MATCH (e:Employee {name:\"Jane\"})\n",
-    "    RETURN e.name AS name, e.surname AS surname\n",
-    "\"\"\"\n",
-    "execute_query(custom_query)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 13,
    "id": "b2fa9b19-1afd-4dd9-8ea0-b996b946b4aa",
    "metadata": {},
    "outputs": [
@@ -212,26 +186,32 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "competence\temployees\t\n",
-      "Netiquette\t['EMPLOYEE_20', 'EMPLOYEE_12', 'EMPLOYEE_21', 'EMPLOYEE_8', 'EMPLOYEE_17', 'EMPLOYEE_19', 'EMPLOYEE_2', 'EMPLOYEE_13']\t\n",
-      "Developing digital content\t['EMPLOYEE_28', 'EMPLOYEE_12', 'EMPLOYEE_18', 'EMPLOYEE_25', 'EMPLOYEE_2', 'EMPLOYEE_29', 'EMPLOYEE_6', 'EMPLOYEE_15', 'EMPLOYEE_9', 'EMPLOYEE_23']\t\n",
-      "Protecting personal data and privacy\t['EMPLOYEE_19', 'EMPLOYEE_14', 'EMPLOYEE_22', 'EMPLOYEE_17', 'EMPLOYEE_4', 'EMPLOYEE_18', 'EMPLOYEE_21', 'EMPLOYEE_25', 'EMPLOYEE_12', 'EMPLOYEE_26', 'EMPLOYEE_11', 'EMPLOYEE_9', 'EMPLOYEE_24', 'EMPLOYEE_29', 'EMPLOYEE_7', 'EMPLOYEE_20', 'EMPLOYEE_6', 'EMPLOYEE_2']\t\n",
-      "Interacting through digital technologies\t['EMPLOYEE_16', 'EMPLOYEE_13', 'EMPLOYEE_20', 'EMPLOYEE_3', 'EMPLOYEE_27', 'EMPLOYEE_21', 'EMPLOYEE_8', 'EMPLOYEE_11', 'EMPLOYEE_30', 'EMPLOYEE_1', 'EMPLOYEE_9']\t\n"
+      "id\tcompetence\t\n",
+      "2.5\tNetiquette\t\n",
+      "3.3\tCopyright and licences\t\n",
+      "4.2\tProtecting personal data and privacy\t\n",
+      "5.3\tCreatively using digital technologies\t\n",
+      "2.1\tInteracting through digital technologies\t\n",
+      "1.3\tManaging data, information and digital content\t\n",
+      "4.4\tProtecting the environment\t\n",
+      "5.1\tSolving technical problems\t\n",
+      "4.3\tProtecting health and well-being\t\n",
+      "3.4\tProgramming\t\n"
      ]
     }
    ],
    "source": [
-    "# Other employees having the same competences\n",
+    "# Competences of an employee\n",
     "custom_query = \"\"\"\n",
-    "    MATCH (e:Employee {name:\"Jane\", surname:\"Wilson\"})-[:HAS_COMPETENCE]->(c:Competence)<-[:HAS_COMPETENCE]-(oe:Employee) \n",
-    "    RETURN c.competence AS competence, collect(oe.employeeId) AS employees\n",
+    "    MATCH (e:Employee {name:\"Jane\", surname:\"Brown\"})-[:HAS_COMPETENCE]->(c:Competence) \n",
+    "    RETURN c.competenceId AS id, c.competence AS competence\n",
     "\"\"\"\n",
     "execute_query(custom_query)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 28,
    "id": "39feed1c-7e94-4b52-b566-a4f6c53eb14a",
    "metadata": {},
    "outputs": [
@@ -239,43 +219,42 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "employee\tnum\t\n",
-      "EMPLOYEE_20\t3\t\n",
-      "EMPLOYEE_12\t3\t\n",
-      "EMPLOYEE_21\t3\t\n",
-      "EMPLOYEE_2\t3\t\n",
-      "EMPLOYEE_9\t3\t\n",
-      "EMPLOYEE_8\t2\t\n",
-      "EMPLOYEE_17\t2\t\n",
-      "EMPLOYEE_19\t2\t\n",
-      "EMPLOYEE_13\t2\t\n",
-      "EMPLOYEE_18\t2\t\n",
-      "EMPLOYEE_25\t2\t\n",
-      "EMPLOYEE_29\t2\t\n",
-      "EMPLOYEE_6\t2\t\n",
-      "EMPLOYEE_11\t2\t\n",
-      "EMPLOYEE_28\t1\t\n",
-      "EMPLOYEE_15\t1\t\n",
-      "EMPLOYEE_23\t1\t\n",
-      "EMPLOYEE_14\t1\t\n",
-      "EMPLOYEE_22\t1\t\n",
-      "EMPLOYEE_4\t1\t\n",
-      "EMPLOYEE_26\t1\t\n",
-      "EMPLOYEE_24\t1\t\n",
-      "EMPLOYEE_7\t1\t\n",
-      "EMPLOYEE_16\t1\t\n",
-      "EMPLOYEE_3\t1\t\n",
-      "EMPLOYEE_27\t1\t\n",
-      "EMPLOYEE_30\t1\t\n",
-      "EMPLOYEE_1\t1\t\n"
+      "employee_name\temployee_surname\tnum\t\n",
+      "David\tBrown\t10\t\n",
+      "Jane\tTaylor\t10\t\n",
+      "David\tDavis\t9\t\n",
+      "David\tMiller\t9\t\n",
+      "Sophia\tJohnson\t9\t\n",
+      "Jane\tDavis\t8\t\n",
+      "Daniel\tBrown\t8\t\n",
+      "David\tHarris\t7\t\n",
+      "David\tJohnson\t7\t\n",
+      "Sophia\tHarris\t7\t\n",
+      "Michael\tWilson\t7\t\n",
+      "David\tBrown\t7\t\n",
+      "Emma\tJohnson\t6\t\n",
+      "Olivia\tDavis\t6\t\n",
+      "Andrew\tWilson\t5\t\n",
+      "Daniel\tDavis\t5\t\n",
+      "Emma\tClark\t5\t\n",
+      "Olivia\tClark\t4\t\n",
+      "Sophia\tDavis\t4\t\n",
+      "Michael\tJohnson\t4\t\n",
+      "David\tMiller\t4\t\n",
+      "David\tTaylor\t3\t\n",
+      "Jane\tSmith\t3\t\n",
+      "Olivia\tWilson\t2\t\n",
+      "Emily\tWilson\t1\t\n",
+      "Emily\tBrown\t1\t\n"
      ]
     }
    ],
    "source": [
     "# More \"similar\" employees\n",
     "custom_query = \"\"\"\n",
-    "    MATCH (e:Employee {name:\"Jane\", surname:\"Wilson\"})-[:HAS_COMPETENCE]->(c:Competence)<-[:HAS_COMPETENCE]-(oe:Employee) \n",
-    "    RETURN oe.employeeId AS employee, count(c) as num ORDER BY num DESC\n",
+    "    MATCH (e:Employee {name:\"Jane\", surname:\"Brown\"})-[:HAS_COMPETENCE]->(c:Competence)<-[:HAS_COMPETENCE]-(oe:Employee)\n",
+    "    WITH e, oe, COLLECT(c) as competences\n",
+    "    RETURN oe.name AS employee_name, oe.surname AS employee_surname, size(competences) as num ORDER BY num DESC\n",
     "\"\"\"\n",
     "execute_query(custom_query)"
    ]
