Align corso-kg-neo4j to the graph model

--- a/notebooks/corso-kg-neo4j.ipynb
+++ b/notebooks/corso-kg-neo4j.ipynb
@@ -10,8 +10,18 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Requirement already satisfied: neo4j==5.0.1 in /opt/conda/lib/python3.11/site-packages (5.0.1)\n",
-      "Requirement already satisfied: pytz in /opt/conda/lib/python3.11/site-packages (from neo4j==5.0.1) (2023.3)\n"
+      "Collecting neo4j==5.0.1\n",
+      "  Downloading neo4j-5.0.1.tar.gz (172 kB)\n",
+      "\u001b[2K     \u001b[90m━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━\u001b[0m \u001b[32m172.4/172.4 kB\u001b[0m \u001b[31m8.2 MB/s\u001b[0m eta \u001b[36m0:00:00\u001b[0m\n",
+      "\u001b[?25h  Preparing metadata (setup.py) ... \u001b[?25ldone\n",
+      "\u001b[?25hRequirement already satisfied: pytz in /opt/conda/lib/python3.11/site-packages (from neo4j==5.0.1) (2023.3)\n",
+      "Building wheels for collected packages: neo4j\n",
+      "  Building wheel for neo4j (setup.py) ... \u001b[?25ldone\n",
+      "\u001b[?25h  Created wheel for neo4j: filename=neo4j-5.0.1-py3-none-any.whl size=247362 sha256=1701889fb77cadc76f10ccbbc307b83f9fbf737017e691cf0452fdbaab115a6e\n",
+      "  Stored in directory: /home/jovyan/.cache/pip/wheels/c2/33/c6/fa22720f17810f856b71d7a5bfb579f56f6eb1fc00ba00262a\n",
+      "Successfully built neo4j\n",
+      "Installing collected packages: neo4j\n",
+      "Successfully installed neo4j-5.0.1\n"
      ]
     }
    ],
@@ -22,7 +32,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 3,
    "id": "f74c8541-2658-4e7c-8eab-79fa680199b4",
    "metadata": {},
    "outputs": [],
@@ -43,7 +53,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 4,
    "id": "b83cf41b-db7d-4754-a1fb-0690a462e0c2",
    "metadata": {},
    "outputs": [
@@ -87,10 +97,9 @@
     "            AS row\n",
     "            MERGE (c:Competence {competenceId: row.id})\n",
     "            ON CREATE SET\n",
-    "            c.dimension = row.dimension,\n",
-    "            c.source = row.source,\n",
-    "            c.competence = row.competence,\n",
-    "            c.description = row.description\n",
+    "            c.name = row.competence,\n",
+    "            c.description = row.description,\n",
+    "            c.dimension = row.dimension\n",
     "            \"\"\")\n",
     "    print(\"Create competences\")\n",
     "    session.execute_write(create_competences)\n",
@@ -100,7 +109,7 @@
     "            LOAD CSV WITH HEADERS\n",
     "            FROM \"file:///employees.csv\"\n",
     "            AS row\n",
-    "            MERGE (u:Unit {unitName: row.unit})\n",
+    "            MERGE (u:Unit {name: row.unit})\n",
     "            \"\"\")\n",
     "    print(\"Create units\")\n",
     "    session.execute_write(create_units)\n",
@@ -115,8 +124,8 @@
     "            e.name = row.name,\n",
     "            e.surname = row.surname\n",
     "            WITH e, row\n",
-    "            MATCH (u:Unit {unitName: row.unit})\n",
-    "            MERGE (e)-[r:IN_UNIT]->(u)\n",
+    "            MATCH (u:Unit {name: row.unit})\n",
+    "            MERGE (e)-[r:BELONGS_TO]->(u)\n",
     "            \"\"\")\n",
     "    print(\"Create employees\")\n",
     "    session.execute_write(create_employees)\n",
@@ -143,7 +152,7 @@
     "            WITH row WHERE row.interest = \"1\"\n",
     "            MATCH (e:Employee {employeeId: row.employee_id})\n",
     "            MATCH (c:Competence {competenceId: row.competence_id})\n",
-    "            MERGE (e)-[r:INTERESTED_IN]->(c)\n",
+    "            MERGE (e)-[r:HAS_INTEREST]->(c)\n",
     "        \"\"\"\n",
     "        return tx.run(cypher)\n",
     "    print(\"Load interest\")\n",
@@ -152,7 +161,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 5,
    "id": "dd912652-cba1-46c0-acb5-cb2c23ce8c61",
    "metadata": {},
    "outputs": [],
@@ -178,7 +187,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 7,
    "id": "b2fa9b19-1afd-4dd9-8ea0-b996b946b4aa",
    "metadata": {},
    "outputs": [
@@ -204,14 +213,14 @@
     "# Competences of an employee\n",
     "custom_query = \"\"\"\n",
     "    MATCH (e:Employee {name:\"Jane\", surname:\"Brown\"})-[:HAS_COMPETENCE]->(c:Competence) \n",
-    "    RETURN c.competenceId AS id, c.competence AS competence\n",
+    "    RETURN c.competenceId AS id, c.name AS competence\n",
     "\"\"\"\n",
     "execute_query(custom_query)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 10,
    "id": "39feed1c-7e94-4b52-b566-a4f6c53eb14a",
    "metadata": {},
    "outputs": [
@@ -219,7 +228,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "employee_name\temployee_surname\tnum\t\n",
+      "name\tsurname\tnum_common_competences\t\n",
       "David\tBrown\t10\t\n",
       "Jane\tTaylor\t10\t\n",
       "David\tDavis\t9\t\n",
@@ -254,7 +263,7 @@
     "custom_query = \"\"\"\n",
     "    MATCH (e:Employee {name:\"Jane\", surname:\"Brown\"})-[:HAS_COMPETENCE]->(c:Competence)<-[:HAS_COMPETENCE]-(oe:Employee)\n",
     "    WITH e, oe, COLLECT(c) as competences\n",
-    "    RETURN oe.name AS employee_name, oe.surname AS employee_surname, size(competences) as num ORDER BY num DESC\n",
+    "    RETURN oe.name AS name, oe.surname AS surname, size(competences) as num_common_competences ORDER BY num_common_competences DESC\n",
     "\"\"\"\n",
     "execute_query(custom_query)"
    ]
